--- a/src/assets/css/util.css
+++ b/src/assets/css/util.css
@@ -2983,6 +2983,18 @@
 	bottom: 0px;
 }
 
+/* border */
+.border{
+	border: 1px solid rgba(0, 0, 0)!important;
+}
+
+.border-b{
+	border-bottom: 0 !important;
+}
+.border-button{
+	background-color: rgba(255, 255, 255);
+	box-shadow: rgba(0, 0, 0, 0.13) 0px 0px 2px 0px, rgba(0, 0, 0, 0.12) 0px 0px 4px 0px;
+}
 
 
 
